--- a/css/style.production.css
+++ b/css/style.production.css
@@ -55,6 +55,7 @@ button:hover, button:focus{
 .profile_portrait  {
   float: left;
   width: 250px;
+  height: 250px;
   margin-right: 40px;
   border-radius: 50%;
 }
