--- a/css/styles.css
+++ b/css/styles.css
@@ -10,41 +10,50 @@ Secondary color (orange): #e0b354
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
 }
+
 a {
   color: var(--primary-color);
 }
 
 body {
-  font-fmaily: 'Open sans', sans-serif;
+  font-family: 'Open sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
 }
+
 h1 {
   font-size: 30px;
   font-weight: 700;
-
 }
+
 h2 {
   font-size: 20px;
   font-weight: 700;
 }
-h3{
+
+h3 {
   font-size: 16px;
   font-weight: 700;
 }
+
 a {
-  color:#357b70;
+  color: #357b70;
 }
+
 a:visited {
-  color:#05676e;
+  color: #05676e;
 }
-a:hover, a:focus {
-  text-decoration:none;
+
+a:hover,
+a:focus {
+  text-decoration: none;
 }
+
 a:active {
-  color:#489c79;
+  color: #489c79;
 }
+
 button {
   border: none;
   font-family: inherit;
@@ -57,84 +66,103 @@ button {
   border-radius: 20px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
-button:hover, button:focus{
+
+button:hover,
+button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
+
 .button_secondary {
   background-color: #e0b354;
-  color: #2b2b2b
+  color: #2b2b2b;
 }
+
 .navigation-list_item--active {
   text-decoration: none;
 }
-.profile_portrait  {
+
+.profile_portrait {
   float: left;
   width: 250px;
   margin-right: 40px;
   border-radius: 50%;
 }
+
 .page-footer {
   clear: both;
   display: flex;
   flex-direction: column;
   text-align: center;
 }
+
 .profile {
   max-width: 700px;
   margin: 0 auto;
 }
+
 * {
   box-sizing: border-box;
 }
+
 .page-header {
   display: flex;
   width: 100%;
   padding: 20px;
 }
+
 .page-header_item {
   flex: 0 1 200px;
   width: 200px;
   height: 50px;
 }
+
 .page-header_item:last-child {
   flex-grow: 1;
   text-align: right;
 }
+
 .navigation-list {
   list-style-type: none;
 }
+
 .navigation-list li {
   display: inline-block;
   margin-left: 15px;
 }
+
 @supports (display: grid) {
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-  margin: auto;
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin: auto;
+  }
+
+  .grid_item {
+    background-color: lightgray;
+    width: auto;
+    min-height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .grid_item:last-child {
+    grid-column: 2/2;
+    grid-row: 2/2;
+  }
+
+  .grid_item {
+    display: inline-block;
+    width: 40%;
+    text-align: center;
+  }
 }
-.grid_item {
-  background-color: lightgray;
-  width: auto;
-  min-height: auto;
-  margin-left: auto;
-  margin-right: auto;
-}
-.grid_item:last-child {
-  grid-column: 2/2;
-  grid-row: 2/2;
-}
-.grid_item {
-  display: inline-block;
-  width: 40%;
-  text-align: center;
-}
-}
+
 .main-content {
   text-align: center;
 }
+
 .table {
   margin-left: auto;
   margin-right: auto;
@@ -145,27 +173,34 @@ button:hover, button:focus{
     grid-template-columns: 1fr;
   }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid_item:last-child {
     grid-column: auto/auto;
     grid-row: auto/auto;
   }
+
   h1 {
     font-size: 30px;
   }
 }
+
 .about_list {
   list-style-type: none;
 }
-.button, button {
+
+.button,
+button {
   border: none;
   display: inline-block;
   font-family: inherit;
@@ -177,17 +212,21 @@ button:hover, button:focus{
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
 }
+
 @keyframes color-change {
-  0%{
+  0% {
     fill: #edc655;
   }
+
   50% {
     fill: #f76414;
   }
+
   100% {
     fill: #f76414;
   }
 }
+
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
